// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert tab dynamically 1`] = `
<van-tabs>
  <van-tab title="1">1</van-tab>
  <div>
    <van-tab title="2">2</van-tab>
  </div>
  <van-tab title="3">3</van-tab>
</van-tabs>
`;

exports[`insert tab with child component 1`] = `
<van-tabs>
  <van-tab title="1">1</van-tab>
  <van-tab title="2">2</van-tab>
  <van-tab title="3">3</van-tab>
</van-tabs>
`;

exports[`insert tab with name dynamically 1`] = `
<van-tabs>
  <van-tab title="1" name="bar">2</van-tab>
  <van-tab title="2" name="foo">1</van-tab>
</van-tabs>
`;
